Fix parent-child component communication and post rsvp to server.

--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,7 @@
   "name": "wedding-website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:61661/",
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "4.0.0",
