--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.17.1",
-    "bootstrap": "4.0.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "axios": "^0.18.0",
+    "bootstrap": "4.1.3",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
-    "reactstrap": "^5.0.0-alpha.4"
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
